# systemrs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  STATUS.md  deny.toml  justfile  release-plz.toml  rust-toolchain.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-attach.sh  post-create.sh
.github/workflows/: ci.yml  pages.yml  release-plz-pr.yml  release-plz.yml
crates/systemrs/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-channels/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-channels/src/: binding.rs  clock.rs  export.rs  fifo.rs  finder.rs  interface.rs  lib.rs  port.rs  signal.rs  tests.rs
crates/systemrs-core/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-core/src/: attribute.rs  build.rs  elaborate.rs  elaboration.rs  hierarchy.rs  kernel_typestate.rs  lib.rs  module.rs  name.rs  object.rs
crates/systemrs-diag/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-diag/src/: action.rs  handler.rs  lib.rs  report.rs  severity.rs
crates/systemrs-examples/: Cargo.toml
crates/systemrs-examples/examples/: checkpoint.rs  counter.rs  dma.rs  pipeline.rs  reverb.rs  rv32i_hart.rs  rv32i_soc.rs  twin.rs
crates/systemrs-examples/src/: checkpoint.rs  counter.rs  dma.rs  lib.rs  pipeline.rs  platform.rs  reverb.rs  rv32i.rs  soc.rs  twin.rs
crates/systemrs-examples/tests/: hierarchy.rs  hot_swap.rs  integration.rs  module_macro.rs  observability.rs  pdes_determinism.rs  rv32i_soc.rs  snapshot_restore.rs  twin_external_input.rs  twin_identity.rs  twin_pacer.rs  twin_replay.rs
crates/systemrs-kernel/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-kernel/src/: channel.rs  ctx.rs  event.rs  ids.rs  inner.rs  lib.rs  phase.rs  process.rs  sim.rs  snapshot.rs  tests.rs  timed.rs
crates/systemrs-kernel/tests/: adversarial_and_verify.rs
crates/systemrs-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-macros/src/: lib.rs
crates/systemrs-pdes/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-pdes/src/: error.rs  handle.rs  ids.rs  io.rs  lib.rs  link.rs  local.rs  message.rs  orchestrator.rs  region.rs  verify.rs
crates/systemrs-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-runtime/src/: lib.rs  stackful.rs
crates/systemrs-time/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-time/src/: lib.rs  resolution.rs  sim_time.rs
crates/systemrs-tlm-utils/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-tlm-utils/src/: adapter_lt_at.rs  at.rs  at_memory.rs  bus_master.rs  global_quantum.rs  interconnect.rs  irq.rs  lib.rs  multi.rs  passthrough.rs  peq_cb.rs  peq_get.rs  quantum.rs  simple_socket.rs
crates/systemrs-tlm1/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-tlm1/src/: analysis_fifo.rs  analysis_port.rs  analysis_triple.rs  lib.rs
crates/systemrs-tlm2/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-tlm2/src/: extension.rs  gp.rs  lib.rs  memory.rs  mm.rs  phase.rs  protocol.rs  socket.rs  tests.rs
crates/systemrs-trace/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-trace/src/: lib.rs  record.rs  sink.rs  tracer.rs
crates/systemrs-twin/: CHANGELOG.md  Cargo.toml  README.md
crates/systemrs-twin/src/: input.rs  journal.rs  lib.rs  pacer.rs  replay.rs  rng.rs  twin.rs
crates/systemrs/src/: lib.rs  prelude.rs
doc/: plan-m2.md  plan-m4.md  plan-m5.md  plan-m6.md  plan-m7.md  systemrs-design.md
doc/guide/: book.toml
doc/guide/src/: README.md  SUMMARY.md
doc/guide/src/advanced/: parallel.md  snapshots.md
doc/guide/src/core/: channels.md  events.md  ex-counter.md  modules.md  processes.md  time-and-loop.md
doc/guide/src/getting-started/: install.md  mental-model.md  quickstart.md  why.md
doc/guide/src/obs/: analysis-ports.md  reporting.md  tracing.md
doc/guide/src/reference/: architecture.md  determinism.md  naming-map.md  next.md
doc/guide/src/tlm/: at.md  datatypes.md  ex-dma.md  ex-platform.md  ex-reverb.md  ex-rv32i.md  lt.md  payload-and-sockets.md  temporal-decoupling.md
doc/guide/src/twins/: ex-twin.md  external-input.md  needs.md  pacing.md  replay.md
scripts/: _common.sh  audit.sh  book.sh  build-release.sh  build.sh  ci.sh  clippy.sh  commit-lint.sh  deny.sh  doc.sh  examples.sh  fmt-check.sh  fmt.sh  msrv.sh  open-docs.sh  pdes-rayon.sh  semver-checks.sh  site.sh  test.sh
