# Workspace root (virtual manifest) for SystemRS.
#
# See `doc/systemrs-design.md` §10 for the original crate plan. This workspace
# implements the deterministic core, the full TLM-2.0 LT+AT path (`-tlm-utils`),
# observability (`-tlm1`/`-trace`), the digital-twin layer (`-twin`), and the M7
# parallel-PDES tier (`-pdes`). SystemC interop (`-ffi`) is deliberately NOT a crate
# here: it lives in a separate bridge repo against this repo's pure-Rust `FwTransport`
# seam, so the core never depends on a C++ toolchain (revises design §10/§11).
[workspace]
resolver = "3"
members = [
    "crates/systemrs-diag",
    "crates/systemrs-time",
    "crates/systemrs-runtime",
    "crates/systemrs-macros",
    "crates/systemrs-kernel",
    "crates/systemrs-core",
    "crates/systemrs-channels",
    "crates/systemrs-tlm1",
    "crates/systemrs-tlm2",
    "crates/systemrs-tlm-utils",
    "crates/systemrs-trace",
    "crates/systemrs-twin",
    "crates/systemrs-pdes",
    "crates/systemrs",
    "crates/systemrs-examples",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.90"
license = "Apache-2.0"
repository = "https://github.com/systemrs/systemrs"
homepage = "https://github.com/systemrs/systemrs"
authors = ["Nicholas Londey <londey@gmail.com>"]
# Inherited by every crate via `keywords.workspace = true` / `categories.workspace = true`.
# crates.io caps keywords at 5 (<=20 chars each) and `categories` must be valid slugs.
keywords = ["systemc", "tlm", "simulation", "modeling", "digital-twin"]
categories = ["simulation", "development-tools"]

[workspace.dependencies]
# Internal crates (path + version per design §10.4).
systemrs-diag = { path = "crates/systemrs-diag", version = "0.1.1" }
systemrs-time = { path = "crates/systemrs-time", version = "0.1.1" }
systemrs-runtime = { path = "crates/systemrs-runtime", version = "0.1.1" }
systemrs-kernel = { path = "crates/systemrs-kernel", version = "0.1.1" }
systemrs-core = { path = "crates/systemrs-core", version = "0.1.1" }
systemrs-channels = { path = "crates/systemrs-channels", version = "0.1.1" }
systemrs-tlm1 = { path = "crates/systemrs-tlm1", version = "0.1.1" }
systemrs-tlm2 = { path = "crates/systemrs-tlm2", version = "0.1.1" }
systemrs-tlm-utils = { path = "crates/systemrs-tlm-utils", version = "0.1.1" }
systemrs-trace = { path = "crates/systemrs-trace", version = "0.1.1" }
systemrs-twin = { path = "crates/systemrs-twin", version = "0.1.1" }
systemrs-pdes = { path = "crates/systemrs-pdes", version = "0.1.1" }

# External: bit-accurate fixed-point (Q-notation) for the DSP examples. SystemRS
# deliberately drops `sc_dt` (design §3.12) — models bring their own datatypes and
# the generic payload carries the bytes; `qfixed` demonstrates exactly that.
qfixed = { version = "0.1", default-features = false }
systemrs-macros = { path = "crates/systemrs-macros", version = "0.1.1" }
systemrs = { path = "crates/systemrs", version = "0.1.1" }

# External crates, default-features off per the Rust skill.
slotmap = { version = "1", default-features = false }
# Proc-macro toolchain for `systemrs-macros` (the `#[module]` attribute). The
# `proc-macro` feature is required to interoperate with the compiler's macro API.
proc-macro2 = { version = "1", default-features = false, features = ["proc-macro"] }
quote = { version = "1", default-features = false, features = ["proc-macro"] }
syn = { version = "2", default-features = false, features = [
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }
# `unwind` is required so a suspended fiber (a thread parked at wait() when the
# simulation ends) is force-unwound on drop, running its destructors.
corosensei = { version = "0.3", default-features = false, features = [
    "default-stack",
    "unwind",
] }
thiserror = { version = "2", default-features = false }
# rayon for the optional Tier-1 PDES parallel backend (systemrs-pdes `rayon` feature).
# Needs its default features (the work-stealing pool + the parallel-iterator prelude).
rayon = { version = "1" }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic lints relaxed for this project (per the Rust skill's guidance).
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
enum_variant_names = "allow"
# Numeric casts are pervasive and intentional in a u64-time / RV32I codebase.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
similar_names = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
