[package]
name = "systemrs-diag"
description = "Diagnostics and reporting for SystemRS (severity, actions, Report/ReportError)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
