[package]
name = "systemrs-examples"
description = "Runnable SystemRS examples: a gated counter, an RV32I CPU hart, and a fixed-point guitar reverb."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
systemrs.workspace = true
qfixed.workspace = true

[lints]
workspace = true

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "rv32i_hart"
path = "examples/rv32i_hart.rs"

[[example]]
name = "reverb"
path = "examples/reverb.rs"

[[example]]
name = "dma"
path = "examples/dma.rs"

[[example]]
name = "twin"
path = "examples/twin.rs"

[[example]]
name = "pipeline"
path = "examples/pipeline.rs"
