[package]
name = "systemrs-macros"
description = "Proc-macros for SystemRS: the #[module] attribute that generates module registration boilerplate."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
