[package]
name = "systemrs-time"
description = "Integer simulation time (SimTime) and resolution for SystemRS."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
systemrs-diag.workspace = true

[lints]
workspace = true
