[package]
name = "systemrs"
description = "SystemRS: a Rust, TLM-only equivalent of SystemC for transaction-level digital twins (facade)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
systemrs-diag.workspace = true
systemrs-time.workspace = true
systemrs-kernel.workspace = true
systemrs-core.workspace = true
systemrs-channels.workspace = true
systemrs-tlm1.workspace = true
systemrs-tlm2.workspace = true
systemrs-tlm-utils.workspace = true
systemrs-trace.workspace = true
systemrs-twin.workspace = true
systemrs-pdes.workspace = true
# The facade is the ONLY crate that depends on the proc-macro crate, so it can
# re-export the macros without any other crate forming a dependency cycle.
systemrs-macros.workspace = true

[features]
default = []
# Enable the optional rayon-backed parallel execution of the Tier-1 PDES orchestrator.
# Off by default; the orchestrator is correct and deterministic without it.
pdes-rayon = ["systemrs-pdes/rayon"]

[lints]
workspace = true

# Build docs.rs with the full feature surface, and gate feature-flagged docs on `docsrs`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
